mux-compiler/tests/snapshots/parser_integration__legacy_ast_modglobal_d.snap
---
source: mux-compiler/tests/parser_integration.rs
---
[
    Statement(
        StatementNode {
            kind: ConstDecl(
                "SHARED",
                TypeNode {
                    kind: Primitive(
                        Int,
                    ),
                    span: Span,
                },
                ExpressionNode {
                    kind: Literal(
                        Integer(
                            111,
                        ),
                    ),
                    span: Span,
                },
            ),
            span: Span,
        },
    ),
    Class {
        name: "Scaler",
        type_params: [],
        traits: [],
        fields: [
            Field {
                name: "factor",
                type_: TypeNode {
                    kind: Primitive(
                        Int,
                    ),
                    span: Span,
                },
                is_generic_param: false,
                is_const: false,
                default_value: None,
                where_clause: None,
            },
        ],
        methods: [
            FunctionNode {
                name: "of",
                type_params: [],
                params: [
                    Param {
                        name: "factor",
                        type_: TypeNode {
                            kind: Primitive(
                                Int,
                            ),
                            span: Span,
                        },
                        default_value: None,
                    },
                ],
                return_type: TypeNode {
                    kind: Named(
                        "Scaler",
                        [],
                    ),
                    span: Span,
                },
                body: [
                    StatementNode {
                        kind: AutoDecl(
                            "s",
                            TypeNode {
                                kind: Auto,
                                span: Span,
                            },
                            ExpressionNode {
                                kind: Call {
                                    func: ExpressionNode {
                                        kind: FieldAccess {
                                            expr: ExpressionNode {
                                                kind: Identifier(
                                                    "Scaler",
                                                ),
                                                span: Span,
                                            },
                                            field: "new",
                                        },
                                        span: Span,
                                    },
                                    args: [],
                                },
                                span: Span,
                            },
                        ),
                        span: Span,
                    },
                    StatementNode {
                        kind: Expression(
                            ExpressionNode {
                                kind: Binary {
                                    left: ExpressionNode {
                                        kind: FieldAccess {
                                            expr: ExpressionNode {
                                                kind: Identifier(
                                                    "s",
                                                ),
                                                span: Span,
                                            },
                                            field: "factor",
                                        },
                                        span: Span,
                                    },
                                    op: Assign,
                                    op_span: Span,
                                    right: ExpressionNode {
                                        kind: Identifier(
                                            "factor",
                                        ),
                                        span: Span,
                                    },
                                },
                                span: Span,
                            },
                        ),
                        span: Span,
                    },
                    StatementNode {
                        kind: Return(
                            Some(
                                ExpressionNode {
                                    kind: Identifier(
                                        "s",
                                    ),
                                    span: Span,
                                },
                            ),
                        ),
                        span: Span,
                    },
                ],
                span: Span,
                is_common: true,
                where_clause: None,
            },
            FunctionNode {
                name: "scaled",
                type_params: [],
                params: [],
                return_type: TypeNode {
                    kind: Primitive(
                        Int,
                    ),
                    span: Span,
                },
                body: [
                    StatementNode {
                        kind: Return(
                            Some(
                                ExpressionNode {
                                    kind: Binary {
                                        left: ExpressionNode {
                                            kind: FieldAccess {
                                                expr: ExpressionNode {
                                                    kind: Identifier(
                                                        "self",
                                                    ),
                                                    span: Span,
                                                },
                                                field: "factor",
                                            },
                                            span: Span,
                                        },
                                        op: Multiply,
                                        op_span: Span,
                                        right: ExpressionNode {
                                            kind: Identifier(
                                                "SHARED",
                                            ),
                                            span: Span,
                                        },
                                    },
                                    span: Span,
                                },
                            ),
                        ),
                        span: Span,
                    },
                ],
                span: Span,
                is_common: false,
                where_clause: None,
            },
        ],
        where_clause: None,
        span: Span,
    },
]
