mux-compiler/tests/snapshots/parser_integration__legacy_ast_modglobal_e.snap
---
source: mux-compiler/tests/parser_integration.rs
---
[
    Statement(
        StatementNode {
            kind: Import {
                module_path: "modglobal_c",
                spec: Wildcard,
            },
            span: Span,
        },
    ),
    Statement(
        StatementNode {
            kind: Import {
                module_path: "modglobal_a",
                spec: Items {
                    items: [
                        (
                            "LABEL",
                            None,
                        ),
                    ],
                },
            },
            span: Span,
        },
    ),
    Statement(
        StatementNode {
            kind: Import {
                module_path: "modglobal_c",
                spec: Item {
                    item: "LIMIT",
                    alias: Some(
                        "CAP",
                    ),
                },
            },
            span: Span,
        },
    ),
    Function(
        FunctionNode {
            name: "threshold_plus",
            type_params: [],
            params: [
                Param {
                    name: "extra",
                    type_: TypeNode {
                        kind: Primitive(
                            Int,
                        ),
                        span: Span,
                    },
                    default_value: None,
                },
            ],
            return_type: TypeNode {
                kind: Primitive(
                    Int,
                ),
                span: Span,
            },
            body: [
                StatementNode {
                    kind: Return(
                        Some(
                            ExpressionNode {
                                kind: Binary {
                                    left: ExpressionNode {
                                        kind: Identifier(
                                            "err_threshold",
                                        ),
                                        span: Span,
                                    },
                                    op: Add,
                                    op_span: Span,
                                    right: ExpressionNode {
                                        kind: Identifier(
                                            "extra",
                                        ),
                                        span: Span,
                                    },
                                },
                                span: Span,
                            },
                        ),
                    ),
                    span: Span,
                },
            ],
            span: Span,
            is_common: false,
            where_clause: None,
        },
    ),
    Function(
        FunctionNode {
            name: "banner",
            type_params: [],
            params: [],
            return_type: TypeNode {
                kind: Primitive(
                    Str,
                ),
                span: Span,
            },
            body: [
                StatementNode {
                    kind: Return(
                        Some(
                            ExpressionNode {
                                kind: Binary {
                                    left: ExpressionNode {
                                        kind: Binary {
                                            left: ExpressionNode {
                                                kind: Identifier(
                                                    "LABEL",
                                                ),
                                                span: Span,
                                            },
                                            op: Add,
                                            op_span: Span,
                                            right: ExpressionNode {
                                                kind: Literal(
                                                    String(
                                                        " @ ",
                                                    ),
                                                ),
                                                span: Span,
                                            },
                                        },
                                        span: Span,
                                    },
                                    op: Add,
                                    op_span: Span,
                                    right: ExpressionNode {
                                        kind: Call {
                                            func: ExpressionNode {
                                                kind: FieldAccess {
                                                    expr: ExpressionNode {
                                                        kind: Identifier(
                                                            "print_width",
                                                        ),
                                                        span: Span,
                                                    },
                                                    field: "to_string",
                                                },
                                                span: Span,
                                            },
                                            args: [],
                                        },
                                        span: Span,
                                    },
                                },
                                span: Span,
                            },
                        ),
                    ),
                    span: Span,
                },
            ],
            span: Span,
            is_common: false,
            where_clause: None,
        },
    ),
    Function(
        FunctionNode {
            name: "capped",
            type_params: [],
            params: [],
            return_type: TypeNode {
                kind: Primitive(
                    Int,
                ),
                span: Span,
            },
            body: [
                StatementNode {
                    kind: Return(
                        Some(
                            ExpressionNode {
                                kind: Identifier(
                                    "CAP",
                                ),
                                span: Span,
                            },
                        ),
                    ),
                    span: Span,
                },
            ],
            span: Span,
            is_common: false,
            where_clause: None,
        },
    ),
]
