mux-compiler/tests/snapshots/parser_integration__legacy_ast_nested_typed_collections.snap
---
source: mux-compiler/tests/parser_integration.rs
---
[
    Function(
        FunctionNode {
            name: "main",
            type_params: [],
            params: [],
            return_type: TypeNode {
                kind: Primitive(
                    Void,
                ),
                span: Span,
            },
            body: [
                StatementNode {
                    kind: TypedDecl(
                        "x",
                        TypeNode {
                            kind: Map(
                                TypeNode {
                                    kind: Primitive(
                                        Int,
                                    ),
                                    span: Span,
                                },
                                TypeNode {
                                    kind: Set(
                                        TypeNode {
                                            kind: Primitive(
                                                Int,
                                            ),
                                            span: Span,
                                        },
                                    ),
                                    span: Span,
                                },
                            ),
                            span: Span,
                        },
                        ExpressionNode {
                            kind: MapLiteral {
                                key_type: TypeNode {
                                    kind: Auto,
                                    span: Span,
                                },
                                value_type: TypeNode {
                                    kind: Auto,
                                    span: Span,
                                },
                                entries: [
                                    (
                                        ExpressionNode {
                                            kind: Literal(
                                                Integer(
                                                    1,
                                                ),
                                            ),
                                            span: Span,
                                        },
                                        ExpressionNode {
                                            kind: SetLiteral(
                                                [],
                                            ),
                                            span: Span,
                                        },
                                    ),
                                ],
                            },
                            span: Span,
                        },
                    ),
                    span: Span,
                },
                StatementNode {
                    kind: Expression(
                        ExpressionNode {
                            kind: Call {
                                func: ExpressionNode {
                                    kind: Identifier(
                                        "print",
                                    ),
                                    span: Span,
                                },
                                args: [
                                    ExpressionNode {
                                        kind: Call {
                                            func: ExpressionNode {
                                                kind: FieldAccess {
                                                    expr: ExpressionNode {
                                                        kind: Identifier(
                                                            "x",
                                                        ),
                                                        span: Span,
                                                    },
                                                    field: "to_string",
                                                },
                                                span: Span,
                                            },
                                            args: [],
                                        },
                                        span: Span,
                                    },
                                ],
                            },
                            span: Span,
                        },
                    ),
                    span: Span,
                },
                StatementNode {
                    kind: TypedDecl(
                        "y",
                        TypeNode {
                            kind: Map(
                                TypeNode {
                                    kind: Primitive(
                                        Int,
                                    ),
                                    span: Span,
                                },
                                TypeNode {
                                    kind: Map(
                                        TypeNode {
                                            kind: Primitive(
                                                Int,
                                            ),
                                            span: Span,
                                        },
                                        TypeNode {
                                            kind: Primitive(
                                                Int,
                                            ),
                                            span: Span,
                                        },
                                    ),
                                    span: Span,
                                },
                            ),
                            span: Span,
                        },
                        ExpressionNode {
                            kind: MapLiteral {
                                key_type: TypeNode {
                                    kind: Auto,
                                    span: Span,
                                },
                                value_type: TypeNode {
                                    kind: Auto,
                                    span: Span,
                                },
                                entries: [
                                    (
                                        ExpressionNode {
                                            kind: Literal(
                                                Integer(
                                                    1,
                                                ),
                                            ),
                                            span: Span,
                                        },
                                        ExpressionNode {
                                            kind: MapLiteral {
                                                key_type: TypeNode {
                                                    kind: Auto,
                                                    span: Span,
                                                },
                                                value_type: TypeNode {
                                                    kind: Auto,
                                                    span: Span,
                                                },
                                                entries: [],
                                            },
                                            span: Span,
                                        },
                                    ),
                                ],
                            },
                            span: Span,
                        },
                    ),
                    span: Span,
                },
                StatementNode {
                    kind: Expression(
                        ExpressionNode {
                            kind: Call {
                                func: ExpressionNode {
                                    kind: Identifier(
                                        "print",
                                    ),
                                    span: Span,
                                },
                                args: [
                                    ExpressionNode {
                                        kind: Call {
                                            func: ExpressionNode {
                                                kind: FieldAccess {
                                                    expr: ExpressionNode {
                                                        kind: Identifier(
                                                            "y",
                                                        ),
                                                        span: Span,
                                                    },
                                                    field: "to_string",
                                                },
                                                span: Span,
                                            },
                                            args: [],
                                        },
                                        span: Span,
                                    },
                                ],
                            },
                            span: Span,
                        },
                    ),
                    span: Span,
                },
                StatementNode {
                    kind: TypedDecl(
                        "z",
                        TypeNode {
                            kind: Map(
                                TypeNode {
                                    kind: Primitive(
                                        Int,
                                    ),
                                    span: Span,
                                },
                                TypeNode {
                                    kind: Map(
                                        TypeNode {
                                            kind: Primitive(
                                                Int,
                                            ),
                                            span: Span,
                                        },
                                        TypeNode {
                                            kind: Primitive(
                                                Str,
                                            ),
                                            span: Span,
                                        },
                                    ),
                                    span: Span,
                                },
                            ),
                            span: Span,
                        },
                        ExpressionNode {
                            kind: MapLiteral {
                                key_type: TypeNode {
                                    kind: Auto,
                                    span: Span,
                                },
                                value_type: TypeNode {
                                    kind: Auto,
                                    span: Span,
                                },
                                entries: [
                                    (
                                        ExpressionNode {
                                            kind: Literal(
                                                Integer(
                                                    1,
                                                ),
                                            ),
                                            span: Span,
                                        },
                                        ExpressionNode {
                                            kind: MapLiteral {
                                                key_type: TypeNode {
                                                    kind: Auto,
                                                    span: Span,
                                                },
                                                value_type: TypeNode {
                                                    kind: Auto,
                                                    span: Span,
                                                },
                                                entries: [
                                                    (
                                                        ExpressionNode {
                                                            kind: Literal(
                                                                Integer(
                                                                    2,
                                                                ),
                                                            ),
                                                            span: Span,
                                                        },
                                                        ExpressionNode {
                                                            kind: Literal(
                                                                String(
                                                                    "hello",
                                                                ),
                                                            ),
                                                            span: Span,
                                                        },
                                                    ),
                                                ],
                                            },
                                            span: Span,
                                        },
                                    ),
                                ],
                            },
                            span: Span,
                        },
                    ),
                    span: Span,
                },
                StatementNode {
                    kind: Expression(
                        ExpressionNode {
                            kind: Call {
                                func: ExpressionNode {
                                    kind: Identifier(
                                        "print",
                                    ),
                                    span: Span,
                                },
                                args: [
                                    ExpressionNode {
                                        kind: Call {
                                            func: ExpressionNode {
                                                kind: FieldAccess {
                                                    expr: ExpressionNode {
                                                        kind: Identifier(
                                                            "z",
                                                        ),
                                                        span: Span,
                                                    },
                                                    field: "to_string",
                                                },
                                                span: Span,
                                            },
                                            args: [],
                                        },
                                        span: Span,
                                    },
                                ],
                            },
                            span: Span,
                        },
                    ),
                    span: Span,
                },
                StatementNode {
                    kind: Return(
                        None,
                    ),
                    span: Span,
                },
            ],
            span: Span,
            is_common: false,
            where_clause: None,
        },
    ),
]
